--- a/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
+++ b/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
@@ -45,7 +45,7 @@
     <div class="flex gap-2">
       <a
         routerLink=""
-        [routerLink]="['/product-view',product._id]"
+        [routerLink]="['/product-view', product._id]"
         class="flex-1 bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 transition-colors"
       >
         Ver más
@@ -61,6 +61,26 @@
       >
         🛒
       </button>
+      <div *ngIf="rol === 'admin'">
+        <button
+          class="absolute p-2 bg-yellow-500 text-white rounded-full hover:bg-yellow-600 transition-all duration-200 hover:scale-105"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-4 h-4"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125"
+            />
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
 </div>
