--- a/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
+++ b/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
@@ -61,7 +61,8 @@
       >
         🛒
       </button>
-      <div *ngIf="rol === 'admin'">
+      <!-- <div *ngIf="rol === 'admin'"> -->
+      <div *appAdmin >
         <button
           class="absolute p-2 bg-yellow-500 text-white rounded-full hover:bg-yellow-600 transition-all duration-200 hover:scale-105"
         >
