--- a/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
+++ b/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
@@ -1,6 +1,11 @@
 <div
   class="bg-white rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300 overflow-hidden"
 >
+  <div class="absolute"  *appOffer="product.offer">
+    <span class="rounded-full p-4 bg-red-500 text-white text-sm absolute top-0 left-0 z-50 font-bold">
+      -{{product.offer}}%
+    </span>
+  </div>
   <div class="aspect-square bg-gray-100 flex items-center justify-center">
     @if (product.imageUrl) {
     <img
