--- a/02.Project/ecommerce-app/src/app/components/sidebar/menu-item/menu-item.component.html
+++ b/02.Project/ecommerce-app/src/app/components/sidebar/menu-item/menu-item.component.html
@@ -1,6 +1,7 @@
 <a
   [routerLink]="route.route"
-  class="flex items-center px-4 py-3 text-white hover:bg-slate-700 rounded-lg transition-colors duration-200 cursor-pointer"
+  [ngClass]="route.textColor || 'text-white'"
+  class="flex items-center px-4 py-3 hover:bg-slate-700 rounded-lg transition-colors duration-200 cursor-pointer"
 >
   <span class="text-base font-medium">{{ route.title }}</span>
 </a>
