--- a/02.Project/ecommerce-app/src/app/components/auth/register-form/register-form.component.html
+++ b/02.Project/ecommerce-app/src/app/components/auth/register-form/register-form.component.html
@@ -1,6 +1,8 @@
 <div class="min-h-screen bg-gray-50 flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
     <form
+      (ngSubmit)="handleSubmit()"
+      [formGroup] = 'registerForm'  
       class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100 space-y-6"
     >
       <div class="text-center">
@@ -11,6 +13,14 @@
       <div class="space-y-5">
        
       </div>
+
+      <input type="text" formControlName="displayName" placeholder="nombre de usuario">
+      <input type="date" formControlName="dateOfBirth" placeholder="dia de nacimiento">
+      <input type="email" formControlName="email" placeholder="email">
+      <input type="text" formControlName="phone" placeholder="phone">
+      <input type="password" formControlName="password" placeholder="contraseña">
+      <input type="password" formControlName="repeatPassword" placeholder="repetir contraseña">
+
 
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-3">
@@ -48,6 +58,7 @@
 
       <button
         type="submit"
+        [disabled]="!registerForm.valid"
         class="w-full bg-blue-600 text-white py-3.5 px-6 rounded-xl font-semibold text-base hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-100 transition-all duration-200 disabled:bg-gray-200 disabled:text-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-200"
       >
         <span class="flex items-center justify-center gap-2">
